--- a/README
+++ b/README
@@ -2,12 +2,12 @@
 
 redgreen is a fork of Pat Eyler's & Chris Wanstrath's RedGreen.
 
-I had problems with autotest just running once then stopping rather than continuously testing.
+I had problems with autotest just running once and stopping, rather than continuously testing.
 
 This version works using ZenTest 4.0.0 on Vista. It should work on XP although I haven't tested it.
 
 Autotest & Snarl Setup
----------------
+------------------------------
 See here to set up your windows environment:
 http://thewebfellas.com/blog/2007/12/10/rspec-autotest-and-snarl-on-windows
 
@@ -18,8 +18,8 @@ require 'Win32/Console/ANSI'
 require 'redgreen/autotest'
 
 Snarl Issue (Tests always Pass)
----------------
-Currently to allow Snarl to work with ZenTest 4.0.0 you need to modify autotest.rb file:
+------------------------------
+Currently to allow Snarl to work with ZenTest 4.0.0 you need to modify autotest.rb file (Usually: C:\Ruby\lib\ruby\gems\1.8\gems\ZenTest-4.0.0\lib\):
 
 Change this line:
 self.failed_results_re = /^\s+\d+\) (?:Failure|Error):\n(.*?)\((.*?)\)/
@@ -31,7 +31,9 @@ I'll pop an email over to the ZenTest guys to see if they are okay to make this 
 
 This then allows the regular expression to ignore the colour escape codes and it picks up the correct amount of failures.
 
-
+Other Minor Changes
+------------------------------
+Changed the colour scheme from foreground to background colours as I find it a little easier on the eyes!
 
 Luke Pearce
 www.kulesolutions.com
